[gd_scene load_steps=2 format=3 uid="uid://6wpanuw2c5wd"]

[ext_resource type="Script" path="res://Scripts/Componentes/ElementalStateMachine.gd" id="1_3axif"]

[node name="ElementalState" type="Node"]
script = ExtResource("1_3axif")

[node name="StateLenght" type="Timer" parent="."]
one_shot = true

[node name="DamageCycle" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="StateLenght" to="." method="_on_elemental_timer_timeout"]
[connection signal="timeout" from="DamageCycle" to="." method="_on_elemental_damage_timeout"]
